# mududb

./: .actrc  .gitignore  .rust-nightly-version  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.dev  README.cn.md  README.md  clippy.toml  deny.toml  readme.cn.md  readme.md  rust-toolchain.toml
example/: Cargo.toml  content.mudu.prompt.txt  makefile.toml  readme.md
example/game-backend/: Cargo.toml  Makefile.toml
example/key-value/: Cargo.toml  Makefile.toml  README.md
example/pull-push/: Cargo.toml  README.md
example/src/: lib.rs
example/tpcc/: Cargo.toml  Makefile.toml  README.md
example/vote/: Cargo.toml  Makefile.toml
example/wallet/: Cargo.toml  Makefile.toml  readme.md
example/wallet-as/: .gitignore  Makefile.toml  asconfig.json  package.json  readme.md
example/wasm/: example.wasm
example/ycsb/: Cargo.toml  Makefile.toml  README.md
mpm_build/: Cargo.toml  README.md
mpm_build/src/: cli_test.rs  lib.rs  main.rs  main_test.rs  merge_desc_test.rs
mpm_build/tests/: cli_test.rs
mpm_install/: Cargo.toml  README.md
mpm_install/src/: install.rs  main.rs  mpm_cfg.rs
mudu/: Cargo.toml  README.md  build.rs
mudu/src/: lib.rs
mudu_adapter/: Cargo.toml  README.md
mudu_adapter/src/: backend.rs  codec.rs  config.rs  kv.rs  kv_test.rs  lib.rs  mududb.rs  mududb_test.rs  mysql.rs  mysql_test.rs  postgres.rs  postgres_test.rs  result_set.rs  sql.rs  sqlite.rs  state.rs  syscall.rs
mudu_adapter/tests/: adapter_coverage_test.rs
mudu_api_sync/: Cargo.toml  README.md  build.rs
mudu_api_sync/src/: lib.rs
mudu_binding/: Cargo.toml  readme.md
mudu_binding/src/: lib.rs
mudu_binding/wit/: uni-dat-type.wit  uni-dat-value.wit  uni-data-type.wit  uni-data-value.wit  uni-error.wit  uni-primitive-value.wit  uni-primitive.wit  uni-procedure-param.wit  uni-procedure-result.wit  uni-record-type.wit  uni-result-type.wit  uni-scalar-value.wit  uni-scalar.wit  uni-sql-param.wit  uni-syscall.wit  uni-tuple-row.wit
mudu_build_common/: Cargo.toml  README.md
mudu_build_common/src/: build_common_test.rs  lib.rs
mudu_build_common/tests/: smoke.rs
mudu_cli/: Cargo.toml  README.md
mudu_cli/src/: binding_api.rs  lib.rs  main.rs  main_test.rs  management.rs  management_test.rs  tui.rs
mudu_cli/tests/: cli_integration.rs
mudu_contract/: Cargo.toml  README.md
mudu_contract/src/: lib.rs  protocol.rs
mudu_gen/: Cargo.toml  README.md  build.rs
mudu_gen/src/: lib.rs
mudu_gen/tests/: test_mgen.rs
mudu_gen/tool/: main.rs  test_tool.rs  test_tool_wit_schema.rs
mudu_gen/ts_const_gen/: from_gram.rs  grammar.md5.txt
mudu_kernel/: Cargo.toml  README.md
mudu_kernel/cfg/: test.toml
mudu_kernel/data/: ddl.sql
mudu_kernel/fuzz/: Cargo.toml  fuzz.md
mudu_kernel/src/: compat.rs  compat_test.rs  lib.rs
mudu_kernel/tests/: schema_table_consistency.rs  server_cfg_test.rs
mudu_package/: Cargo.toml  README.md
mudu_package/src/: cli_test.rs  lib.rs  main.rs  main_test.rs  merge_desc.rs
mudu_package/tests/: cli_test.rs
mudu_runtime/: Cargo.toml  README.md  build.rs
mudu_runtime/src/: db_connector.rs  lib.rs
mudu_runtime/wit/: api.wit  async-api.wit  readme.md
mudu_sys/: Cargo.toml  README.md
mudu_sys/src/: lib.rs  sync.rs  sync_async.rs  sync_sync.rs  task.rs  task_async.rs  task_context.rs  task_id.rs  task_sync.rs
mudu_sys/tests/: smoke.rs
mudu_sys_contract/: Cargo.toml  README.md  clippy.toml
mudu_sys_contract/src/: lib.rs
mudu_sys_impl/: Cargo.toml  README.md  clippy.toml
mudu_sys_impl/src/: env.rs  lib.rs  process.rs  sys_context.rs  sys_io_context.rs  task_macros.rs
mudu_sys_wasm/: Cargo.toml  README.md
mudu_sys_wasm/src/: lib.rs  random_test.rs  sync_test.rs  time_test.rs
mudu_transpiler/: Cargo.toml  build.rs  readme.md
mudu_transpiler/src/: lib.rs  main.rs  mtp.rs  mtp_test.rs  procedure_shim.rs  test_mtp.rs
mudu_transpiler/tests/: main_test.rs
mudu_type/: Cargo.toml  README.md
mudu_type/src/: dat_binary.rs  dat_binary_test.rs  dat_json.rs  dat_msg_pack_test.rs  dat_type.rs  dat_type_id.rs  dat_typed.rs  dat_typed_test.rs  dat_val_array_test.rs  dat_value.rs  data_binary.rs  data_binary_test.rs  data_json.rs  data_msg_pack.rs  data_msg_pack_test.rs  data_textual.rs  data_type.rs  data_type_fn_arbitrary.rs  data_type_fn_compare.rs  data_type_fn_compare_test.rs  data_type_fn_convert.rs  data_type_fn_param.rs  data_type_fn_param_test.rs  data_type_function.rs  data_type_function_test.rs  data_type_info.rs  data_type_param.rs  data_type_param_array.rs  data_type_param_array_test.rs  data_type_param_kind.rs  data_type_param_kind_test.rs  data_type_param_numeric.rs  data_type_param_record.rs  data_type_param_record_test.rs  data_type_param_string.rs  data_type_param_string_test.rs  data_type_param_time.rs  data_type_param_time_test.rs  data_type_param_timestamp.rs  data_type_param_timestamp_test.rs  (+38 more)
mudu_utils/: Cargo.toml  README.md
mudu_utils/src/: debug.rs  debug_test.rs  init_log.rs  init_log_test.rs  json.rs  lib.rs  log.rs  md5.rs  notifier.rs  oid.rs  task.rs  task_async.rs  task_context.rs  task_id.rs  task_macros.rs  task_sync.rs  task_trace.rs  task_trace_test.rs  test_debug_server.rs  this_file.rs  thread_trace.rs  toml.rs  ts_gram.rs
mudu_wasm/: Cargo.toml  makefile.toml  readme.md
mudu_wasm/build-cfg/: mpk-arguments.toml
mudu_wasm/package/: package.cfg.json  package.desc.json
mudu_wasm/src/: lib.rs
mudu_wasm/wasm_module/: app1.mpk  package1.mpk  proc.toml  testdb.ddl.sql
mududb/: Cargo.toml  README.md
mududb/src/: lib.rs
mududb/tests/: reexports.rs
mudup/: Cargo.toml
mudup/src/: archive.rs  checksum.rs  cli.rs  config.rs  libs.rs  main.rs  remote.rs  toolchain.rs  util.rs
sql_parser/: Cargo.toml  README.md  build.rs
sql_parser/data/: ddl.sql
sql_parser/src/: lib.rs  lib_test.rs
sys_interface/: Cargo.toml  README.md  standalone_adapter.md
testing/: Cargo.toml  Makefile.toml  README.md
testing/src/: lib.rs  (+3 more)
tree-sitter-sql/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  readme.md  tree-sitter.json
(+1849 files in other folders)
