[package]
name = "mudu"
version = "0.1.0"
edition = "2024"


[dependencies]
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
num_enum = { version = "0.7.4" }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
crc = "3.3.0"
heck = { version = "0.5.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = {workspace = true}
arbitrary = { workspace = true }
test_utils = { workspace = true }
uniffi = { workspace = true }
[lib]
path = "src/lib.rs"

[features]
test = []
