[package]
name = "mudu"
version = "0.1.0"
license = "Apache-2.0"
edition = "2024"
rust-version.workspace = true


[lints]
workspace = true

[dependencies]
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
num_enum = { workspace = true }
strum = { workspace = true, features = ["derive"] }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
crc = { workspace = true }
heck = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arbitrary = { workspace = true }

[build-dependencies]
toml = { workspace = true }

[lib]
path = "src/lib.rs"

[features]
test = []
