[package]
name = "mudu_binding"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"


[lints]
workspace = true

[dependencies]
mudu = { workspace = true }
mudu_type = {workspace = true}
mudu_contract = {workspace = true}
serde = { workspace = true }
tracing = { workspace = true }
serde_repr = {workspace = true}

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
