[package]
name = "mudu_gen"
version = "0.1.0"
edition = "2021"



[build-dependencies]
project-root = { workspace = true }

[dependencies]
mudu = {workspace = true}
sql_parser = {workspace = true}
clap = { version = "4.5.41", features = ["derive"] }

[dev-dependencies]
cc = {version = "1.2.24"}
project-root = {version = "0.2.2"}

[lib]
path = "src/lib.rs"

[[bin]]
name = "modul_gen"
path = "tool/main.rs"



