[package]
name = "mudu_gen"
version = "0.1.0"
edition = "2021"



[build-dependencies]
project-root = { workspace = true }

[dependencies]
mudu = { workspace = true }
sql_parser = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
project-root = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "modul_gen"
path = "tool/main.rs"



