[package]
name = "mudu_kernel"
version = "0.0.1"
edition = "2021"

[features]
test = []
debug_trace = ["mudu_utils/debug_trace"]

[dependencies]

mudu = { workspace = true, features = ["test"] }

mudu_type = { workspace = true, features = ["test"] }
mudu_contract = { workspace = true }
uuid = { workspace = true }
short-uuid = "0.2.0"

serde = { workspace = true }

tokio = { workspace = true }
lazy_static = { workspace = true }

regex = { version = "1.11.0" }
serde_json = { workspace = true }

async-trait = { workspace = true }
arbitrary = { version = "1.4.2", features = ["derive"] }
tracing = { workspace = true }
chrono = { workspace = true }
async-backtrace = { workspace = true }
pgwire = { workspace = true }
futures = { workspace = true }
scc = {workspace = true}
project-root = { workspace = true }
toml = { workspace = true }
home = { version = "0.5.9" }
csv-async = { version = "1.3.0" }
async-std = { version = "1.13.0" }
libc = { workspace = true }
sql_parser = { workspace = true }
test_utils = { workspace = true }
mudu_utils = { workspace = true }
roaring = "0.11.2"
mcslock = {version = "0.4.1"}
rand = "0.9.2"
tokio-condvar = {version = "0.3.0"}
socket2 = "0.5.8"
crossbeam-queue = "0.3.11"
log = "0.4.29"

[target.'cfg(target_os = "linux")'.dependencies]
rliburing = { git = "https://github.com/scuptio/rliburing.git" }


[dev-dependencies]
postgres = { workspace = true }
