[package]
name = "mudu_kernel"
version = "0.0.1"
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0"

[features]
test = []
debug_trace = ["mudu_sys/debug_trace", "mudu_utils/debug_trace", "dep:async-backtrace"]

[lints]
workspace = true

[dependencies]

mudu = { workspace = true, features = ["test"] }
mudu_compat_migrate = { workspace = true }
mudu_sys = { workspace = true }

mudu_type = { workspace = true, features = ["test"] }
mudu_contract = { workspace = true }
uuid = { workspace = true }
short-uuid = { workspace = true }

serde = { workspace = true }
rmp-serde = { workspace = true }

lazy_static = { workspace = true }


serde_json = { workspace = true }

async-trait = { workspace = true }
arbitrary = { workspace = true }
tracing = { workspace = true }

pgwire = { workspace = true }
futures = { workspace = true }
scc = { workspace = true }
project-root = { workspace = true }

csv = { workspace = true }
libc = { workspace = true }
sql_parser = { workspace = true }
test_utils = { workspace = true }
mudu_utils = { workspace = true }
async-backtrace = { workspace = true, optional = true }
crossbeam-queue = { workspace = true }

byteorder = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
