[package]
name = "mudu_package"
version = "0.1.0"
edition = "2024"

[dependencies]
zip = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tempfile = "3.23"
anyhow = { workspace = true }
mudu = { workspace = true }
serde = { workspace = true }
mudu_contract = { workspace = true }

[[bin]]
name = "mpk"
path = "src/main.rs"
