[package]
name = "mudu_runtime"
version = "0.1.0"
edition = "2024"


[dependencies]
as-slice = { version = "0.2.1" }
sql_parser = { workspace = true }
mudu = { workspace = true }
mudu_gen = { workspace = true }
wasmtime = { version = "36.0.2" }
wasmtime-wasi = { version = "36.0.2", features = ["preview1"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
serde = { workspace = true }
uuid = { version = "1.18.0", features = ["v4"] }
chrono = "0.4.41"
serde_json = "1.0.143"
actix-web = "4.11.0"
tokio = "1.47.1"
mudu_utils = { workspace = true }
tracing = "0.1.41"
strum = { version = "0.27.2" }
strum_macros = { version = "0.27" }
libsql = { version = "0.9.23" }
lazy_static = "1.5.0"
toml = "0.9.8"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
postgres = { version = "0.19.10" }
scc = { version = "3.0.7" }

[dev-dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
rusqlite = {workspace = true}
