[package]
name = "mudu_runtime"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"
build = "build.rs"

[package.metadata.wit-bindgen]
out-dir = "src/bindings"

[features]
debug_trace = ["mudu_kernel/debug_trace", "mudu_utils/debug_trace"]

[lints]
workspace = true

[dependencies]
mudu_type = { workspace = true }
mudu_sys = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = { workspace = true }
mudu_kernel = { workspace = true }
mudu_cli = { workspace = true }
as-slice = { version = "0.2.1" }
sql_parser = { workspace = true }
mudu = { workspace = true }
wasmtime = { workspace = true, features = ["async"] }
wasmtime-wasi = { workspace = true, features = ["p2"] }
serde = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
mudu_utils = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
libsql = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
scopeguard = { workspace = true }
base64 = { workspace = true }
pgwire = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
scc = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
rustls-pki-types = "1.10"
