[package]
name = "mudu_sys"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true

[features]
default = ["native"]
native = []
debug_trace = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mudu_sys_impl = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
mudu_sys_wasm = { workspace = true }
