[package]
name = "mudu_sys_contract"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(sim)'] }

[lints.clippy]
disallowed-types = "allow"

[features]
debug_trace = []

[dependencies]
mudu = { workspace = true }
async-trait = { workspace = true }
libc = { workspace = true }
