[package]
name = "mudu_sys_wasm"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"
publish = false

[lints.clippy]
disallowed-types = "allow"
disallowed-methods = "allow"

[dependencies]
chrono = { workspace = true }
mudu = { workspace = true }
uuid = { workspace = true }
