[package]
name = "mudu_utils"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"

[features]
debug_trace = [
    "mudu_sys/debug_trace",
    "dep:http",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:lazy_static",
]

[lints]
workspace = true

[dependencies]
md-5 = { workspace = true }
bytes = { workspace = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
mudu = { workspace = true }
mudu_sys = { workspace = true }
scc = { workspace = true }
async-backtrace = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
console-subscriber = { workspace = true }
tracing-subscriber = { workspace = true }
