[package]
name = "mod_0"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"

[features]
default = ["transpile"]
transpile = ["mududb/component-model", "mududb/async"]

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
mududb = { workspace = true }
wit-bindgen = { workspace = true }
lazy_static = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = ['wit-bindgen']
