[package]
name = "sql_parser"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[build-dependencies]

mudu = { workspace = true }
tree_sitter_sql = { workspace = true }
serde_json = { workspace = true }
project-root = { workspace = true }
tree-sitter = { workspace = true }
md-5 = { workspace = true }
base16ct = { workspace = true }
[dependencies]
mudu = { workspace = true }
mudu_binding = {workspace = true}
mudu_contract = {workspace = true}
serde_json = { workspace = true }
substring = { version = "1.4.5" }
tree_sitter_sql = { workspace = true }
tree-sitter = { workspace = true }
project-root = { workspace = true }
hex = { workspace = true }
base16ct = { workspace = true }
mudu_type = { workspace = true }
