[package]
name = "sys_interface"
version = "0.1.0"
edition = "2024"

[features]
default = ["component-model"]
wasip1 = []
wasip2 = ["component-model"]
component-model = []
async = []

[dependencies]
mudu = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = {workspace = true}
wit-bindgen = { workspace = true }
