[package]
name = "sys_interface"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["component-model"]
wasip2 = ["component-model"]
component-model = []
async = []
standalone-adapter = ["dep:mudu_adapter"]
uniffi-bindings = ["dep:uniffi", "dep:thiserror", "dep:tokio"]

[lints]
workspace = true

[dependencies]
mudu = { workspace = true }
mudu_contract = { workspace = true }
mudu_binding = {workspace = true}
mudu_sys = { workspace = true }
wit-bindgen = { workspace = true }
mudu_adapter = { workspace = true, optional = true }
uniffi = { workspace = true, features = ["tokio"], optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
mudu_type = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
async-trait = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = ['wit-bindgen']
