[package]
name = "testing"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
mudu_runtime = { workspace = true }
mudu_utils = { workspace = true , features = ["debug_trace"]}
mudu_cli = { workspace = true }
mudu_binding = { workspace = true }
mudu_contract = { workspace = true }
mudu = { workspace = true }
mudu_kernel = { workspace = true }
mudu_sys = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
