[package]
name = "tree_sitter_sql"
description = "sql parser"
version = "0.0.1"
keywords = ["incremental", "parsing", "dot"]
categories = ["parsing", "text-editors"]
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.5"

[dev-dependencies]

tree-sitter = {workspace = true}
serde_json = { version = "1.0.132" }
project-root = { version = "0.2.2" }

[build-dependencies]
cc = "1.2.26"
